# esp-idf

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
main/: CMakeLists.txt  ble_config.h  ble_functions.h  common.h  gatts_demo.c  tr_bt_protocol.c  tr_bt_protocol.h
main/BLE/: ble_config.h  ble_functions.h  signal.c  signal.h
main/FILO_BLE/: bt_protocol.c  bt_protocol.h  connection.c  connection.h  controller.c  controller.h  shared_key.c  shared_key.h  state_event.c  state_event.h
main/TR_BLE/: connection.c  connection.h  sl_simple_timer.h  tr_bt_protocol.c  tr_controller.c  tr_controller.h  tr_state_event.c  tr_state_event.h
