

idf_component_register(SRCS "gatts_demo.c"
					SRCS "BLE/signal.c"
					SRCS "FILO_BLE/shared_key.c"
					SRCS "FILO_BLE/connection.c"
					SRCS "FILO_BLE/controller.c"
					SRCS "FILO_BLE/state_event.c"
					SRCS "FILO_BLE/bt_protocol.c"
                    INCLUDE_DIRS ".")

                    